<resources>
    <string name="app_name">FlashcardMobile</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id
        interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales
        nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
        himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet,
        imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a
        condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut
        sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros
        porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl
        nec dolor bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at,
        mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt
        nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id.
        Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse
        sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor
        sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor
        varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris.
        Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non
        viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat
        diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
        egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer
        dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec
        maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce
        dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="practice">Practice</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="stats">Stats</string>
    <string name="about">About</string>
    <string name="add_cards">Add cards</string>
    <string name="view_deck">View deck</string>
    <string name="delete_deck">Delete deck</string>
    <string name="back">Back</string>
    <string name="decks">Decks</string>
    <string name="add_deck">add_deck</string>
    <string name="menu">menu</string>
    <string name="deck_name">Deck name</string>
    <string name="add">Add</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="save">Save</string>
    <string name="deck">Deck</string>
    <string name="front">Front</string>
    <string name="due_date">Due date</string>
    <string name="select_deck">Select Deck:</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="select_theme">Select Theme:</string>
    <string name="create_new_tag">Create new tag</string>
    <string name="input_tag_name">Input tag name</string>
    <string name="color_picker">Color picker</string>
    <string name="clear_tags">Clear Tags</string>
    <string-array name="search_options">
        <item>Deck</item>
        <item>Front side</item>
        <item>Back side</item>
        <item>Tag</item>
    </string-array>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="title_activity_placeholder_stats">placeholder_activity_stats</string>
    <string name="stats_tab_text_1">Progress</string>
    <string name="stats_tab_text_2">Performance</string>
    <string name="stats_tab_text_3">Milestones</string>
    <string name="statistics_and_milestones">Statistics and Milestones</string>
    <string name="list_tab_text_1">Decks</string>
    <string name="list_tab_text_2">Cards</string>
    <string name="list_tab_text_3">Tags</string>
    <string name="deck_size">Deck Size</string>
    <string name="deck_name_list">Deck Name</string>
    <string name="due_cards">Due Cards</string>
    <string name="front_side">Front Side</string>
    <string name="back_side">Back Side</string>
    <string name="back_to_all_tags">Back to all tags</string>
    <string name="input_tag">Input tag</string>
    <string name="view_cards">View cards</string>
    <string name="edit_tag">Edit tag</string>
    <string name="delete_tag">Delete tag</string>
    <string name="change_tags">Change tags</string>
    <string name="reset_due_date">Reset due date</string>
    <string name="delete_card">Delete card</string>
    <string name="back_to_all_decks">Back to all decks</string>
    <string-array name="streak_numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

</resources>