<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView android:layout_width="0dp" android:layout_height="match_parent"
                  android:layout_weight="1" android:text="@string/select_theme"
                  android:gravity="center" android:textSize="20sp"/>
        <LinearLayout android:layout_width="0dp" android:layout_height="match_parent"
                      android:layout_weight="1" android:orientation="vertical">
            <RadioButton android:layout_width="match_parent" android:layout_height="wrap_content"
                         android:text="@string/light_mode"
                         android:id="@+id/lightMode"
                         />
            <RadioButton android:layout_width="match_parent" android:layout_height="wrap_content"
                         android:text="@string/dark_mode"
            android:id="@+id/darkMode"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>