<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.activity.MainActivity" android:id="@+id/mainLayout">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              android:text="Title placeholder" android:textSize="48sp" android:layout_marginTop="25dp"
              android:id="@+id/titleText"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="25dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText"
            app:layout_constraintBottom_toBottomOf="parent">


        <Button android:layout_width="match_parent" android:layout_height="0dp"
                android:layout_weight="1" android:text="@string/practice" android:textSize="34sp"
        android:id="@+id/practiceBtn"/>
        <Button android:layout_width="match_parent" android:layout_height="0dp"
                android:layout_weight="1" android:text="@string/browse" android:textSize="34sp"
                android:id="@+id/browseBtn"/>
        <Button android:layout_width="match_parent" android:layout_height="0dp"
                android:layout_weight="1" android:text="@string/settings" android:textSize="34sp"
                android:id="@+id/settingsBtn"/>
        <Button android:layout_width="match_parent" android:layout_height="0dp"
                android:layout_weight="1" android:text="@string/stats" android:textSize="34sp"
                android:id="@+id/statsBtn"/>
        <Button android:layout_width="match_parent" android:layout_height="0dp"
                android:layout_weight="1" android:text="@string/about" android:textSize="34sp"
                android:id="@+id/aboutBtn"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>