<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="match_parent"
                                                     xmlns:tools="http://schemas.android.com/tools"
                                                     xmlns:app="http://schemas.android.com/apk/res-auto">

    

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:padding="6dp"
                  android:weightSum="5"
                  app:layout_anchorGravity="bottom"
                  app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                  android:id="@+id/column_box">
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:layout_weight="1.15"
                  android:textSize="20sp"
                  android:gravity="center"
                  android:text="@string/deck"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:layout_weight="1.15"
                  android:gravity="center"
                  android:textSize="20sp"
                  android:text="@string/front"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:layout_weight="1.15"
                  android:gravity="center"
                  android:textSize="20sp"
                  android:text="@string/back"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:layout_weight="1.15"
                  android:gravity="center"
                  android:textSize="20sp"
                  android:text="@string/due_date"/>
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="0.4"
                  android:gravity="center"
                  android:text=""/>


    </LinearLayout>
    
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="3dp"
            android:paddingTop="5dp"
            android:paddingEnd="3dp"
            android:paddingBottom="5dp"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/column_box"
            tools:listitem="@layout/item_table_cell_list_view"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>