<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="match_parent"
                                                     xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:padding="6dp"
                  android:weightSum="4"
                  android:id="@+id/column_box">
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:layout_weight="1.2"
                  android:textSize="20sp"
                  android:gravity="center"
                  android:text="@string/front"
                  android:id="@+id/firstCol"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:layout_weight="1.2"
                  android:gravity="center"
                  android:textSize="20sp"
                  android:text="@string/back"
                  android:id="@+id/secondCol"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:layout_weight="1.2"
                  android:gravity="center"
                  android:textSize="20sp"
                  android:text="@string/due_date"
                  android:id="@+id/thirdCol"/>
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="0.4"
                  android:gravity="center"
                  android:text=""/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:clipToPadding="false"
            android:scrollbars="vertical"
    tools:listitem="@layout/item_table_cell_view_deck"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>