<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/coordinatorLayout2">


    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:padding="6dp"
                  android:weightSum="5"
                  app:layout_anchorGravity="bottom"
                  app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                  android:id="@+id/column_box"
                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/recyclerView"
                  app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent">
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:layout_weight="1.6"
                  android:textSize="20sp"
                  android:gravity="center"
                  android:text="@string/deck_name_list"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:layout_weight="1.6"
                  android:gravity="center"
                  android:textSize="20sp"
                  android:text="@string/deck_size"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:layout_weight="1.6"
                  android:gravity="center"
                  android:textSize="20sp"
                  android:text="@string/due_cards"/>
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="0.4"
                  android:gravity="center"
                  android:text=""/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="3dp"
            android:paddingTop="5dp"
            android:paddingEnd="3dp"
            android:paddingBottom="5dp"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintTop_toBottomOf="@+id/column_box"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>