<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:padding="16dp"
android:weightSum="6">


    <EditText
            android:id="@+id/frontSideEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Front Side"
            android:inputType="text"
            android:layout_marginBottom="15dp"
    />


    <EditText
            android:id="@+id/backSideEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Back Side"
            android:inputType="text"
            android:layout_marginBottom="40dp"/>


    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginBottom="20dp"
                  android:orientation="horizontal"
                  android:weightSum="2"
                  android:id="@+id/deckSelectionBox">
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/select_deck"
                  android:gravity="center"
                  android:textSize="25sp"/>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            <AutoCompleteTextView
                    android:id="@+id/deckSelectionAutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
            />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:weightSum="3">

        <AutoCompleteTextView
                android:id="@+id/tagInputBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Input tag"
                android:gravity="top"
                android:layout_weight="2"
                android:layout_marginEnd="10dp"
        />

        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:src="@drawable/add"
                     android:id="@+id/create_tag_button"
                     android:tooltipText="@string/create_new_tag"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:weightSum="3" android:background="@color/white"
    android:layout_weight="2">

        <com.google.android.flexbox.FlexboxLayout android:layout_width="0dp" android:layout_height="match_parent"
                                                  android:id="@+id/tag_container" android:orientation="horizontal"
                                                  android:padding="8dp"
                                                  app:alignItems="flex_start"
                                                  app:justifyContent="flex_start"
                                                  app:flexWrap="wrap"
                                                  android:background="@drawable/customborder"
                                                  android:layout_weight="2"/>
        <Button android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear_tags"
                android:id="@+id/clear_tags_button"/>


    </LinearLayout>


    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:text="Add Card"
            android:id="@+id/addCardButton"/>

</LinearLayout>